added agency id query param to get agencies
